--- a/Anoter Page/index.html
+++ b/Anoter Page/index.html
@@ -39,7 +39,7 @@
                 function popup22() {
                     swal({
                         title: "Quiz of Today!",
-                        text: "I want to make 3 headings like <h3>ahmed</h3> <h3>Salma</h3> <h3>Mona</h3> and make the first head color red by 3 ways you can use id and class Enjoy 😍✌",
+                        text: " html علي الصفحة للي عملتوها ب css طبقوا اللي تعلمتوه في لغة ",
                         icon: "success",
                         button: "Ok I will",
                     });
