--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <a href="https://dl.dropboxusercontent.com/s/miwxl7u6kicaxrh/Lec%203.pdf?dl=0"> <img src="img/3.png" class="pd1"></a>
             <a href="https://dl.dropboxusercontent.com/s/0pcxk4gmvtmikho/Lec%204.pdf?dl=0"><img src="img/4.png" class="pd1"></a>
             <a href="https://download942.mediafire.com/1dmx9bi60cfg/gr6gwtybz2vr3wo/Lec+5.pdf"><img src="img/5.png" class="pd1"></a>
+            <a href="https://download1518.mediafire.com/5ye7zugq33xg/5qrhgymcrn4h4f5/Lec+6.pdf"><img src="img/6.png" class="pd1"></a>
             <button class="w3-button w3-black w3-display-left" onclick="plusDivs2(-1)" id="btn1">&#10094;</button>
             <button class="w3-button w3-black w3-display-right" onclick="plusDivs2(1)" id="btn2">&#10095;</button>
 
@@ -149,6 +150,13 @@
         </video></a>
             </div>
 
+            <div class="video-slide">
+                <a href="https://download1474.mediafire.com/84hpmp0c8gtg/gzvzmmyt53jayl1/lec+6.mp4">
+                    <video poster="img/60.png">
+          
+        </video></a>
+            </div>
+
 
             <button class="video-slider-btn left-side" onclick="plusDivs1(-1)">&#10094;</button>
             <button class="video-slider-btn right-side" onclick="plusDivs1(1)">&#10095;</button>
@@ -172,13 +180,14 @@
         <div id="the_line11"></div>
         <div id="the_line22"></div>
         <br> <br>
-        <div style="width: 100px; height: 100px; display: inline; justify-items: center; margin-left: 270px;" id="task">
+        <div style="width: 100px; height: 100px; display: inline; justify-items: center; margin-left: 180px;" id="task">
 
             <a href="https://download1644.mediafire.com/pq8yt6h1uwjg/72yv3cansqtm7hl/index.html"> <img src="./img/10.png"> </a>
             <a href="https://download1079.mediafire.com/e6c3e9adlycg/7hoi6p97od7ksst/Task+Lec+2.rar"> <img src="./img/20.png"> </a>
             <a href="https://download1500.mediafire.com/zalu5fbj0jbg/73cunugn3s53cvz/Lec+3.rar"> <img src="./img/30.png"> </a>
             <a href="https://download1351.mediafire.com/y9ptp2f4jecg/j3l3to4l6v8kxgj/Lec+4.rar"> <img src="./img/40.png"> </a>
             <a href="https://download1509.mediafire.com/4wrq5rqtemhg/wrbmqd9fahxwt11/Task+Lec+5.rar"> <img src="./img/50.png"> </a>
+            <a href="https://download1077.mediafire.com/bgrxbb29mx3g/uagn6enh1m6o2ov/Task+Lec6.rar"> <img src="./img/60.png"> </a>
 
         </div>
     </div>
