--- a/Anoter Page/index.html
+++ b/Anoter Page/index.html
@@ -39,7 +39,7 @@
                 function popup22() {
                     swal({
                         title: "Quiz of Today!",
-                        text: " html علي الصفحة للي عملتوها ب css طبقوا اللي تعلمتوه في لغة ",
+                        text: " apply what you learn in css with the page that you made by html 😁",
                         icon: "success",
                         button: "Ok I will",
                     });
