--- a/index.html
+++ b/index.html
@@ -157,6 +157,12 @@
         </video></a>
             </div>
 
+            <div class="video-slide">
+                <a href="https://download1505.mediafire.com/kwbg2no5ldzg/mplt2j37n7z36hb/HTML+%26+CSS+APP.mp4">
+                    <video poster="img/HTML_CSS.png">
+          
+        </video></a>
+            </div>
 
             <button class="video-slider-btn left-side" onclick="plusDivs1(-1)">&#10094;</button>
             <button class="video-slider-btn right-side" onclick="plusDivs1(1)">&#10095;</button>
@@ -179,15 +185,10 @@
         </script>
         <div id="the_line11"></div>
         <div id="the_line22"></div>
-        <br> <br>
+        <br> <br> <br>
         <div style="width: 100px; height: 100px; display: inline; justify-items: center; margin-left: 180px;" id="task">
 
-            <a href="https://download1644.mediafire.com/pq8yt6h1uwjg/72yv3cansqtm7hl/index.html"> <img src="./img/10.png"> </a>
-            <a href="https://download1079.mediafire.com/e6c3e9adlycg/7hoi6p97od7ksst/Task+Lec+2.rar"> <img src="./img/20.png"> </a>
-            <a href="https://download1500.mediafire.com/zalu5fbj0jbg/73cunugn3s53cvz/Lec+3.rar"> <img src="./img/30.png"> </a>
-            <a href="https://download1351.mediafire.com/y9ptp2f4jecg/j3l3to4l6v8kxgj/Lec+4.rar"> <img src="./img/40.png"> </a>
-            <a href="https://download1509.mediafire.com/4wrq5rqtemhg/wrbmqd9fahxwt11/Task+Lec+5.rar"> <img src="./img/50.png"> </a>
-            <a href="https://download1077.mediafire.com/bgrxbb29mx3g/uagn6enh1m6o2ov/Task+Lec6.rar"> <img src="./img/60.png"> </a>
+            <a href="https://github.com/WEB-COURSE2021" id="github1">Visit my Github <i class='bx bxl-github bx-burst'></i></a>
 
         </div>
     </div>
