--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             <a href="https://dl.dropboxusercontent.com/s/0pcxk4gmvtmikho/Lec%204.pdf?dl=0"><img src="img/4.png" class="pd1"></a>
             <a href="https://download942.mediafire.com/1dmx9bi60cfg/gr6gwtybz2vr3wo/Lec+5.pdf"><img src="img/5.png" class="pd1"></a>
             <a href="https://download1518.mediafire.com/5ye7zugq33xg/5qrhgymcrn4h4f5/Lec+6.pdf"><img src="img/6.png" class="pd1"></a>
+            <a href="https://download1327.mediafire.com/d3wv2b3a0ayg/cqhlukl0vfziysp/Lec+7.pdf"><img src="img/7.png" class="pd1"></a>
             <button class="w3-button w3-black w3-display-left" onclick="plusDivs2(-1)" id="btn1">&#10094;</button>
             <button class="w3-button w3-black w3-display-right" onclick="plusDivs2(1)" id="btn2">&#10095;</button>
 
@@ -157,6 +158,8 @@
         </video></a>
             </div>
 
+
+
             <div class="video-slide">
                 <a href="https://download1505.mediafire.com/kwbg2no5ldzg/mplt2j37n7z36hb/HTML+%26+CSS+APP.mp4">
                     <video poster="img/HTML_CSS.png">
@@ -164,6 +167,12 @@
         </video></a>
             </div>
 
+            <div class="video-slide">
+                <a href="https://download1511.mediafire.com/zl0o1jcvcedg/hjuvv1hkpbc3e60/Lec+7.mp4">
+                    <video poster="img/70.png">
+          
+        </video></a>
+            </div>
             <button class="video-slider-btn left-side" onclick="plusDivs1(-1)">&#10094;</button>
             <button class="video-slider-btn right-side" onclick="plusDivs1(1)">&#10095;</button>
     </div>
