--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             <a href="https://download942.mediafire.com/1dmx9bi60cfg/gr6gwtybz2vr3wo/Lec+5.pdf"><img src="img/5.png" class="pd1"></a>
             <a href="https://download1518.mediafire.com/5ye7zugq33xg/5qrhgymcrn4h4f5/Lec+6.pdf"><img src="img/6.png" class="pd1"></a>
             <a href="https://download1327.mediafire.com/d3wv2b3a0ayg/cqhlukl0vfziysp/Lec+7.pdf"><img src="img/7.png" class="pd1"></a>
+            <a href="https://download1584.mediafire.com/33cwx7z2e8hg/jzr2plozhcomhyg/Lec+8.pdf"><img src="img/8.png" class="pd1"></a>
             <button class="w3-button w3-black w3-display-left" onclick="plusDivs2(-1)" id="btn1">&#10094;</button>
             <button class="w3-button w3-black w3-display-right" onclick="plusDivs2(1)" id="btn2">&#10095;</button>
 
@@ -170,6 +171,14 @@
             <div class="video-slide">
                 <a href="https://download1511.mediafire.com/zl0o1jcvcedg/hjuvv1hkpbc3e60/Lec+7.mp4">
                     <video poster="img/70.png">
+          
+        </video></a>
+            </div>
+
+
+            <div class="video-slide">
+                <a href="https://download1491.mediafire.com/wgxp6je03fbg/jeznlrdzrwnyyyd/Lec+8.mp4">
+                    <video poster="img/80.png">
           
         </video></a>
             </div>
