--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css" />
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/StephanWagner/jBox@v1.3.3/dist/jBox.all.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/gh/StephanWagner/jBox@v1.3.3/dist/jBox.all.min.css" rel="stylesheet">
 
 
 </head>
@@ -24,9 +26,12 @@
 
     <div class="div11">
         <div id="nav" class="the_nav">
-            <img src="img/logo.PNG">
-            <p id="the_title"><a href="index.html">WEB DEVELOPMENT COURSE</a></p>
 
+            <img src="img/logo.PNG">
+            <p id="the_title"><a href="index.html">WEB DEVELOPMENT COURSE</a> <span id="hamburger1">   <i class='bx bx-menu' id="click1"></i></span> </p>
+            <div>
+
+            </div>
             <nav>
                 <li><a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fchat.whatsapp.com%2FGGWIlSeOb2F7LTgiZGO86N%3Ffbclid%3DIwAR0N7IRYZCvITNc2FSTePe89VHa2WVV8sWsd-ehCNL1hv993gHjIFQboXMQ&h=AT2m3u5E4tuaNdsmC3yb-_PHquMskT_DZqhHFEyLVMGd7ufJgo13Dcai_rzKfeY32W2qdOtF2f39GRvwaU1JCqhin3rbumsQKmMfdWNyDxQm60VtDSQh435EgosOzhqHilSRrA">Group</a></li>
                 &nbsp; &nbsp;
@@ -34,6 +39,7 @@
                 <li><a href="./Anoter Page/index.html">Quiz</a></li> &nbsp; &nbsp;
                 <li><a href="#the_task">Tasks</a></li> &nbsp; &nbsp;
                 <li><a href="#the_footer">About Me</a></li> &nbsp; &nbsp;
+
                 <li><a onclick="popup3();"><i id="wow1" class='bx bx-error bx-flashing' style="cursor: pointer;"></a></i>
                     <script type="text/javascript">
                         function popup3() {
@@ -248,8 +254,7 @@
         </footer>
     </center>
 
-    <p id="p555">Sorry Site not available now for smart phones 😌🥺</p>
-    <img src="./img/cry.PNG" id="cry">
+
 
 </body>
 
