--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
 
 
 
-    <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br><br> <br><br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br><br> <br> <br> <br> <br>
-    <h2 class="h22" onclick="popup8();">Videos of Lecs <i class='bx bxs-video-recording bx-flashing' id="wow2"></i></h2>
+    <h2 class="h22" id="video1" onclick="popup8();">Videos of Lecs <i class='bx bxs-video-recording bx-flashing' id="wow2"></i></h2>
     <script type="text/javascript">
         function popup8() {
             swal("you can download Videos of sessions 😁✌");
@@ -199,7 +198,7 @@
     <br>
     <br> <br>
     <div id="the_task">
-        <h2 class="h22" onclick="popup8();">Tasks of Lecs <i class='bx bx-task bx-tada' id="wow2"></i></h2>
+        <h2 class="h22" id="task1" onclick="popup8();">Tasks of Lecs <i class='bx bx-task bx-tada' id="wow2"></i></h2>
         <script type="text/javascript">
             function popup8() {
                 swal("you can download tasks of sessions 😁✌");
