--- a/index.html
+++ b/index.html
@@ -187,6 +187,14 @@
           
         </video></a>
             </div>
+
+            <div class="video-slide">
+                <a href="https://download1502.mediafire.com/4f8po8sxjijg/o4153gdbsjvnpnt/Lec+9.mp4">
+                    <video poster="img/90.png">
+          
+        </video></a>
+            </div>
+
             <button class="video-slider-btn left-side" onclick="plusDivs1(-1)">&#10094;</button>
             <button class="video-slider-btn right-side" onclick="plusDivs1(1)">&#10095;</button>
     </div>
