--- a/index.html
+++ b/index.html
@@ -195,6 +195,13 @@
         </video></a>
             </div>
 
+            <div class="video-slide">
+                <a href="https://download1322.mediafire.com/xxwbuobnnmpg/kd66a4hs3kz6yrr/Library.mp4">
+                    <video poster="img/100.png">
+          
+        </video></a>
+            </div>
+
             <button class="video-slider-btn left-side" onclick="plusDivs1(-1)">&#10094;</button>
             <button class="video-slider-btn right-side" onclick="plusDivs1(1)">&#10095;</button>
     </div>
